# getip

./: README.md  pyproject.toml  setup.py
src/getip_mrrobot7-sV/: getip.py
